# kajovo-hotel-monorepo

./: .gitattributes  .gitignore  AGENTS.md  Manifest.md  ManifestDesignKájovo.md  README.md  agents.md  audit2.docx  audit3.docx  audit_01_status_pre.txt  audit_02_branches_remote_sorted.txt  audit_03_merge_log.txt  audit_04_tests_log.txt  audit_05_cleanup_log.txt  audit_06_deleted_remote_branches.txt  audit_07_status_post.txt  kaskadaORF.txt  normUTF.spec  package.json  pnpm-lock.yaml  remote_candidates.txt  tsconfig.base.json
apps/kajovo-hotel-api/: Dockerfile  MANIFEST.in  README.md  alembic.ini  healthcheck-test.db  openapi.json  pyproject.toml
apps/kajovo-hotel-api/alembic/: env.py
apps/kajovo-hotel-api/alembic/versions/: 0001_create_reports_table.py  0002_create_breakfast_orders_table.py  0003_create_lost_found_items_table.py  0004_create_issues_table.py  0005_create_inventory_tables.py  0006_add_updated_at_to_reports.py  0007_create_audit_trail_table.py  0008_add_actor_identity_to_audit_trail.py  0008_baseline_portal_legacy.py  0008_portal_users_smtp.py  0009_create_portal_users_table.py  0010_create_portal_smtp_settings_table.py  0011_expand_portal_users_multi_role_profile.py  0012_add_auth_lockout_and_unlock_tokens.py  0013_add_media_and_inventory_assets.py  0014_add_last_login_at_to_portal_users.py  0014_inventory_documents.py  0015_inventory_documents.py  0016_add_lost_found_tags_room.py  0017_add_breakfast_diet_flags.py  0018_add_auth_sessions.py  0018_add_device_provisioning_tables.py  0019_add_report_media_and_admin_profile.py  0019_add_report_photos.py  0020_add_devices.py  (+6 more)
apps/kajovo-hotel-api/app/: android_release.py  audit_utils.py  config.py  main.py  observability.py  time_utils.py
apps/kajovo-hotel-api/kajovo_hotel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/kajovo-hotel-api/scripts/: export_openapi.py  init_e2e_smoke_db.py  init_smoke_db.py
apps/kajovo-hotel-api/tests/: conftest.py  test_admin_env_sync.py  test_admin_profile.py  test_alembic_history.py  test_android_release.py  test_auth_constraints.py  test_auth_lockout.py  test_auth_password_reset.py  test_auth_role_selection.py  test_breakfast.py  test_breakfast_imap_smoke.py  test_config.py  test_config_defaults.py  test_device.py  test_device_provisioning.py  test_health.py  test_inventory.py  test_issues.py  test_lost_found.py  test_rbac.py  test_rbac_admin_matrix.py  test_reports.py  test_security_headers.py  test_self_service_profile.py  test_smtp_email_service.py  test_support.py  test_users.py
legacy/hotel-backend/: .gitignore  .index  START.BAT  ZIP.BAT  gunicorn.conf.py  pyproject.toml  sync-from-frontend.ps1  sync-from-frontend.sh  zip.ps1
legacy/hotel-backend/app/: __init__.py  config.py  main.py
legacy/hotel-backend/deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
(+817 files in other folders)
