[project]
name = "hcasc-hotel-backend"
version = "1.0.0"
description = "KájovoHotel backend (FastAPI + PostgreSQL + server-rendered admin via Jinja2/HTMX)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "KájovoHotel" }]

dependencies = [
  "fastapi==0.128.1",
  "starlette==0.49.1",
  "uvicorn==0.30.6",
  "gunicorn==22.0.0",

  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",

  "SQLAlchemy==2.0.36",
  "alembic==1.13.3",

  # PostgreSQL driver (binary wheels available)
  "psycopg[binary]==3.2.3",

  # Multipart upload support for photo uploads
  "python-multipart==0.0.22",

  # Server-side templates
  "jinja2==3.1.6",

  # Password hashing (single admin password)
  "argon2-cffi==23.1.0",
  "passlib[bcrypt]==1.7.4",

  # Media processing
  "Pillow==12.1.1",

  # Crypto utilities for device signatures
  "cryptography==46.0.5",

  # Signed cookies/sessions
  "itsdangerous==2.2.0",

  # Rate limiting (in-memory; Nginx also adds baseline limits)
  "slowapi==0.1.9",

  # PDF parsing (Better Hotel – Přehled stravy)
  "pypdf==6.6.2",

  # Utility
  "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.7.3",
  "mypy==1.13.0",
  "pytest==8.3.3",
  "httpx==0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
include = ["*"]
exclude = ["tests*"]
